# python-uv-template

./: .gitignore  Makefile  README.md  example.ipynb  mypy.ini  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/: __init__.py  divide.py  main.py  result.py  test_divide.py
